--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -570,15 +570,18 @@ button {
   font-size: 0.77778rem;
   line-height: 23px;
   line-height: 1.27778rem;
-  display: inline-block;
-  text-align: center;
+}
+.feedback-item.positive button {
+  background-color: rgba(230, 234, 204, 0.5);
+}
+.feedback-item.negative button {
+  background-color: rgba(248, 214, 213, 0.5);
 }
 .feedback-item [class$="-count"] {
   font-size: 23px;
   font-size: 1.27778rem;
   line-height: 35px;
   line-height: 1.91667rem;
-  display: block;
 }
 
 .results-table {
