--- a/templates/demo.html
+++ b/templates/demo.html
@@ -90,7 +90,7 @@
         <div class="session">
           <div class="time">Time: <span class="timer">00:00:00</span></div>
           <div class="chat">Text chat</div>
-          <div class="voice">Voice chat</div>
+          <div class="voice">Video or Voice chat</div>
         </div>
       </section>
 
