results reflect selected topic

--- a/templates/demo.html
+++ b/templates/demo.html
@@ -170,16 +170,16 @@
           <th>After</th>
           <th>Available</th>
         </thead>
-        <tr class="yay">
+        <tr data-id="addition-topic">
           <td>Addition and Subtraction</td>
-          <td>10</td>
-          <td>11</td>
+          <td class="before">10</td>
+          <td class="after" data-orig="10">10</td>
           <td>11</td>
         </tr>
-        <tr>
+        <tr data-id="matrices-topic">
           <td>Matrices</td>
-          <td>0</td>
-          <td>0</td>
+          <td class="before">0</td>
+          <td class="after" data-orig="0">0</td>
           <td>11</td>
         </tr>
       </table>
